8237069: [lworld] Introduce and wire-in the new top interfaces